--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home</title>
+    <title>Clydebank Coffee Shop</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="description" value="ClydeBank Coffee Shop features premium coffee at an affordable price">
 </head>
 <body>
 <header>
@@ -39,7 +40,7 @@
             </div>
             <div class="item-inner clearfix">
                 <ul>
-                    <li>Espresso $1.75</li>
+                    <li>Espresso $2.75</li>
                     <li>Macchiato $2.00</li>
                     <li>Cappucino $3.00</li>
                     <li>Latte $3.00</li>
